@@ -7,8 +7,9 @@ Date: ????
     - Added fuel pollution, vehicle acceleration, and vehicle top speed multipliers to item tooltips
     - Added tooltips to close buttons
   Bugfixes:
-    - Fixed that changes to object availability would not apply when opening the GUI while preserve session is enabled (credit to kubiix)
+    - Fixed a crash when a required fluid for mining was unresearched and "show unresearched objects" was off
     - Fixed a crash when using "%" in search in some situations
+    - Fixed that changes to object availability would not apply when opening the GUI while preserve session is enabled (credit to kubiix)
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.2
 Date: 2021-02-17
